--- a/docs/templates/main.html
+++ b/docs/templates/main.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>README</title>
+  <title>templates/main</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   <link rel="stylesheet" media="all" href="http://strd6.github.io/cdn/parallel/docco.css" />
@@ -18,25 +18,13 @@
               <div class="pilwrap">
                 <a class="pilcrow" href="#section-1">&#182;</a>
               </div>
-              <h1 id="cloaked-avenger">cloaked-avenger</h1>
+              <p>This is the main view that the game is played from.</p>
 
             </div>
-            <div class="content"><pre><code>
-</code></pre>
-</div>
-        </li>
-        
-        
-        <li id="section-2">
-            <div class="annotation">
-              <div class="pilwrap">
-                <a class="pilcrow" href="#section-2">&#182;</a>
-              </div>
-              <p>A spreadsheet game of political parties</p>
-
-            </div>
-            <div class="content"><pre><code>
-</code></pre>
+            <div class="content"><pre><code class="lang-haml">%h1 Mass Politics!
+%p= @points
+%button +10
+  - on &quot;click&quot;, @click</code></pre>
 </div>
         </li>
         
